Fix unit tests in provider-lcm-service
Increased line coverage from 69% to 87%
Removed PrepareForTest annotations for classes under test

Issue-ID: APPC-1325
Change-Id: I75be7235f4c13b0f395843907958d7391a333a32
Signed-off-by: Joss Armstrong <joss.armstrong@ericsson.com>